blocked_csr/tiling_snap_mkl_out/tiling_snap_mkl_stderr_21.txt
awk: cmd. line:1: {print {}
awk: cmd. line:1:        ^ syntax error
benchmark.cpp: In function ‘int main(int, char**)’:
benchmark.cpp:236:6: error: expected ‘(’ before ‘max_row’
  236 |   if max_row > nrows {
      |      ^~~~~~~
      |      (
benchmark.cpp:239:6: error: expected ‘(’ before ‘max_col’
  239 |   if max_col > ncols {
      |      ^~~~~~~
      |      (
make: *** [benchmark] Error 1
